--- a/src/components/newPrompt/newPrompt.css
+++ b/src/components/newPrompt/newPrompt.css
@@ -2,8 +2,9 @@
     padding-bottom: 100px;
 }
     .newForm{
-        width: 100%;
-        position: relative;
+        margin-top: 20px;
+        width: 65%;
+        position: fixed;
         bottom: 0;
         background-color: #2c2937;
         border-radius: 20px;
@@ -11,6 +12,7 @@
         align-items: center;
         gap: 20px;
         padding: 0px 20px;
+        margin-bottom: 10px;
 
         input{
             flex: 1;
